--- a/src/_light.scss
+++ b/src/_light.scss
@@ -3,6 +3,7 @@ $background: #171a1f;
 .theme-light {
   // Background
   --background-light: #fff;
+  --background-light-alt: #fff;
   --background: #edf2f7;
   --background-alt: #f7fafc;
   --background-dark: #e2e8f0;
