--- a/src/popouts/_contextmenu.scss
+++ b/src/popouts/_contextmenu.scss
@@ -6,6 +6,9 @@
 }
 
 #app-mount {
+  .menu-3sdvDG {
+    box-shadow: var(--box-shadow);
+  }
   .item-1tOPte {
     line-height: normal;
     &:active, &.focused-3afm-j:not(.colorDanger-2qLCe1) {
