--- a/src/app/_tooltips.scss
+++ b/src/app/_tooltips.scss
@@ -1,5 +1,5 @@
 #app-mount {
-  .tooltipBlack-PPG47z {
+  .tooltipPrimary-1d1ph4 {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
   }
