--- a/src/popouts/_userpopout.scss
+++ b/src/popouts/_userpopout.scss
@@ -58,9 +58,13 @@
   }
   .headerSpotify-zpWxgT {
     background: var(--background);
-    .button-1Pkqso {
+    .button-2IFFQ4 {
       background: rgba(var(--discord-spotify) / 1);
       border: none;
+      transition: box-shadow .15s ease;
+      &:hover, &:focus {
+        box-shadow: inset 0 0 0 100vmax rgb(0 0 0 / 0.15);
+      }
     }
   }
 }
