--- a/base.css
+++ b/base.css
@@ -14,7 +14,7 @@
   --background-modifier-hover: var(--background-alt);
   --background-modifier-active: var(--background-light);
   --channels-default: var(--text-normal);
-  --version: "2.0.6";
+  --version: "2.0.7";
 }
 
 .theme-light {
@@ -370,6 +370,18 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
   background: var(--background-mentioned);
   border-radius: 0 0 var(--border-radius) 0;
 }
+#app-mount .cozy-3raOZG .repliedMessage-VokQwo {
+  margin-left: calc(var(--message-padding) + 56px);
+}
+#app-mount .cozy-3raOZG .repliedMessage-VokQwo + .contents-2mQqc9 .avatar-1BDn8e, #app-mount .cozy-3raOZG .repliedMessage-VokQwo + .contents-2mQqc9 img {
+  top: 32px;
+}
+#app-mount .cozy-3raOZG .repliedMessage-VokQwo:before {
+  border-color: var(--text-muted);
+}
+#app-mount .hljs-comment {
+  color: var(--text-muted);
+}
 #app-mount .wrapper-3WhCwL {
   background: rgba(var(--accent), 0.1);
   color: rgba(var(--accent), 1);
@@ -377,15 +389,6 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
 #app-mount .wrapper-3WhCwL:hover, #app-mount .wrapper-3WhCwL.popout-open {
   background: rgba(var(--accent), 1);
   color: #fff;
-}
-#app-mount .repliedMessage-VokQwo {
-  margin-left: calc(var(--message-padding) + 56px);
-}
-#app-mount .repliedMessage-VokQwo + .contents-2mQqc9 .avatar-1BDn8e, #app-mount .repliedMessage-VokQwo + .contents-2mQqc9 img {
-  top: 32px;
-}
-#app-mount .repliedMessage-VokQwo:before {
-  border-color: var(--text-muted);
 }
 #app-mount .wrapper-3vR61M {
   background: transparent;
@@ -541,8 +544,24 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
   box-shadow: var(--box-shadow);
   border-radius: var(--border-radius);
 }
+#app-mount .userPopout-3XzG_A .headerTag-2pZJzA,
+#app-mount .userPopout-3XzG_A .headerText-1HLrL7,
+#app-mount .userPopout-3XzG_A .content-3JfFJh,
+#app-mount .userPopout-3XzG_A .text-AOoUen,
+#app-mount .userPopout-3XzG_A .customStatus-1bh2V9,
+#app-mount .userPopout-3XzG_A .headerTagUsernameNoNickname-2_H881 {
+  color: var(--text-normal);
+}
+#app-mount .userPopout-3XzG_A .activityName-1IaRLn,
+#app-mount .userPopout-3XzG_A .nameNormal-2lqVQK,
+#app-mount .userPopout-3XzG_A .nameWrap-3Z4G_9 {
+  color: var(--text-focus);
+}
 #app-mount .userPopout-3XzG_A .headerNormal-T_seeN {
   background: var(--background);
+}
+#app-mount .userPopout-3XzG_A .activity-11LB_k {
+  background: rgba(0, 0, 0, 0.025);
 }
 #app-mount .userPopout-3XzG_A .body-3iLsc4 {
   background: var(--background-alt);
@@ -597,6 +616,9 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
 }
 #app-mount .headerSpotify-zpWxgT .button-2IFFQ4:hover, #app-mount .headerSpotify-zpWxgT .button-2IFFQ4:focus {
   box-shadow: inset 0 0 0 100vmax rgba(0, 0, 0, 0.15);
+}
+#app-mount .barInner-3NDaY_ {
+  background: rgb(var(--discord-spotify));
 }
 
 .theme-light .menu-3sdvDG {
@@ -765,6 +787,10 @@ html, span:not([class*=spinner-]):not([class*=spinnerItem]) {
 }
 #app-mount .lookFilled-1Gx00P.colorBrand-3pXr91:hover {
   box-shadow: inset 0 0 0 100vmax rgba(0, 0, 0, 0.1);
+}
+#app-mount .lookOutlined-3sRXeN.colorWhite-rEQuAQ {
+  border-color: var(--text-normal);
+  color: var(--text-normal);
 }
 #app-mount .button-1YfofB.buttonColor-7qQbGO {
   background: var(--background-light);
