--- a/src/popouts/_userpopout.scss
+++ b/src/popouts/_userpopout.scss
@@ -3,13 +3,32 @@
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
 
+    .headerTag-2pZJzA,
+    .headerText-1HLrL7,
+    .content-3JfFJh,
+    .text-AOoUen,
+    .customStatus-1bh2V9,
+    .headerTagUsernameNoNickname-2_H881 {
+      color: var(--text-normal);
+    }
+    .activityName-1IaRLn,
+    .nameNormal-2lqVQK,
+    .nameWrap-3Z4G_9 {
+      color: var(--text-focus);
+    }
+
+
+
     .headerNormal-T_seeN {
       background: var(--background);
     }
+    .activity-11LB_k {
+      background: rgb(0 0 0 / .025);
+    }
+
     .body-3iLsc4 {
       background: var(--background-alt);
     }
-
 
     .footer-1fjuF6 {
       background: var(--background-alt);
@@ -66,5 +85,8 @@
         box-shadow: inset 0 0 0 100vmax rgb(0 0 0 / 0.15);
       }
     }
+  }
+  .barInner-3NDaY_ {
+    background: rgb(var(--discord-spotify));
   }
 }
