--- a/src/guilds/_container.scss
+++ b/src/guilds/_container.scss
@@ -1,6 +1,6 @@
 #app-mount .guilds-1SWlCJ {
   background: var(--background-dark);
-  .scroller-2TZvBN {
+  .scrollerBase-289Jih {
     background: var(--background-dark);
     &::-webkit-scrollbar {
       display: none;
