--- a/src/guilds/_server.scss
+++ b/src/guilds/_server.scss
@@ -10,7 +10,7 @@
   }
 
   // Add/Join server & Server Discovery
-  .circleIconButton-jET_ig {
+  .circleIconButton-1QV--U {
     background: var(--background-light);
     &:hover {
       background: rgb(var(--discord-green) / 1);
