--- a/src/chat/_message.scss
+++ b/src/chat/_message.scss
@@ -203,6 +203,15 @@
     border-radius: var(--border-radius);
     border: none;
   }
+  .textContainer-C0szpm {
+    border: none;
+    background: var(--background-dark);
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+  }
+  .footer-2yA7Ep {
+    background: var(--background);
+    border: none;
+  }
 
   // Code blocks
   pre code,
