--- a/src/channels/_unreadbar.scss
+++ b/src/channels/_unreadbar.scss
@@ -2,4 +2,5 @@
   border-radius: var(--border-radius);
   background: var(--background-light);
   box-shadow: var(--box-shadow);
+  color: var(--text-normal);
 }
