--- a/src/chat/_bars.scss
+++ b/src/chat/_bars.scss
@@ -21,6 +21,7 @@
       padding: 10px;
       height: auto;
       line-height: normal;
+      color: var(--text-normal);
     }
     .spinner-1AwyAQ {
       padding-left: 12px;
