--- a/src/app/_tooltips.scss
+++ b/src/app/_tooltips.scss
@@ -1,4 +1,7 @@
 #app-mount {
+  .tooltipGrey-1hnvTt {
+    background: var(--background-light);
+  }
   .tooltipPrimary-1d1ph4 {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
