--- a/src/settings/_global.scss
+++ b/src/settings/_global.scss
@@ -47,6 +47,10 @@
     padding: 0;
     background: transparent;
   }
+  .card-3Qj_Yx {
+    background: var(--background-light);
+    border: none;
+  }
 
 
   .sidebarRegionScroller-3MXcoP {
