--- a/src/inputs/_radiogroup.scss
+++ b/src/inputs/_radiogroup.scss
@@ -1,9 +1,22 @@
-#app-mount [role="radiogroup"] {
-  .item-26Dhrx {
+#app-mount {
+  [role="radiogroup"] .item-26Dhrx {
     background: var(--background-alt);
     &:hover {
       background: var(--background-light);
     }
+    &[aria-checked="true"] {
+      background: rgb(var(--accent));
+      color: #fff;
+      .radioIconForeground-XwlXQN,
+      .colorStandard-2KCXvj,
+      .colorHeaderSecondary-3Sp3Ft {
+        color: #fff;
+      }
+    }
+  }
+  .children-rWhLdy > .marginBottom40-2vIwTv .item-26Dhrx,
+  .marginBottom20-32qID7 .item-26Dhrx {
+    background: var(--background);
     &[aria-checked="true"] {
       background: rgb(var(--accent));
       color: #fff;
