--- a/src/pages/_friends.scss
+++ b/src/pages/_friends.scss
@@ -27,6 +27,15 @@
     background: var(--background-dark);
   }
 
+
+
+	.scroller-2ZPeAD {
+		border: none;
+		padding-left: 0;
+	}
+	.container-lRFx4q {
+		background: var(--background);
+	}
   .nowPlayingColumn-2sl4cE {
     background: transparent;
   }
@@ -44,6 +53,7 @@
   .wrapper-3D2qGf {
     background: var(--background-alt);
     border-radius: var(--border-radius);
+		border: none;
     &:hover {
       background: var(--background-light);
       .inset-3sAvek {
@@ -51,6 +61,9 @@
       }
     }
   }
+	.section-2gLsgF {
+		background: var(--background-light);
+	}
   .inset-3sAvek {
     background: var(--background);
   }
